--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,21 +7,16 @@
 main:
   - title: "Publications"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
     
   - title: "Portfolio"
     url: /portfolio/
-        
+  
   - title: "Blog Posts"
     url: /year-archive/
+
+  - title: "Project"
+    url: /Project/
     
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
