--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Haojun Chen"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : "https://Haojun.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://dcchen08.github.io/Haojun.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://dcchen08.github.io/Haojun.github.io"
 
